@@ -4,6 +4,7 @@ TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
 
 v6.1.8 [wip]
 . (kfsone) Download counter to "import", use -q to silence it
+. (kfsone) Fixed case-sensitivity matching station names that changed
 
 v6.1.7 Dec 07 2014
 . (kfsone) Added "scripts" directory with bash scripts
